tests/ui/expr/implication/macro_rules_tests.stderr
error: `$a:expr` is followed by `==`, which is not allowed for `expr` fragments
  --> $DIR/macro_rules_tests.rs:5:14
   |
LL |     ($a:expr == $b:expr) => {
   |              ^^ not allowed after `expr` fragments
   |
   = note: allowed there are: `=>`, `,` or `;`

error: aborting due to 1 previous error

